fixing BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  background-color: rgb(57,57,57);
+}
+
 body {
   background-color: rgb(240,240,240);
   font-family: "Slabo 27px", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
